--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ nav {
 
 }
 
-nav .logo {
+.logo {
   height: 70px;
 }
 
@@ -73,20 +73,74 @@ input[type="checkbox"] {
   display: none;
 }
 
+/*------------------landing section-------------------- */
+
+
+
+#landing {
+  margin-top: 80px;
+  height: 80vh;
+  /* background-color: #7469a4; */
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  align-items: center;
+  font-size: 25px;
+  text-decoration: bold;
+
+  width: 100%;
+
+
+
+
+}
+
+
+
+
+
+.landing-image {
+  height: 500px;
+  width: 600px;
+  border-radius: 20px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
+    0 10px 10px rgba(0, 0, 0, 0.22);
+
+
+}
+
+.wave {
+
+  position: absolute;
+  bottom: 1rem;
+  z-index: -1;
+  box-shadow: 0 14px 0px rgba(0, 0, 0, 0.25),
+    0 10px 10px rgba(0, 0, 0, 0.22);
+
+}
+
+
+
 /*----------------------------------- card------------------------------------- */
+
+.donor {
+  /* background-color: #371f9f; */
+}
 
 .inner {
   /* background-color: aqua; */
-  display: flex;
+  /* display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: center; */
   /* width: 70%; */
+  overflow-y: scroll;
+  height: 100vh;
 }
 
 .inner-inner-doner-border {
   display: flex;
   /* background-color: blue; */
-  width: 95%;
+  width: 100%;
   justify-content: space-between;
   flex-wrap: wrap;
 
@@ -103,6 +157,7 @@ input[type="checkbox"] {
 
 .donor-title-border label {
   /* margin-left: 25px; */
+
 }
 
 .border {
@@ -114,7 +169,15 @@ input[type="checkbox"] {
 
 }
 
-/* dropdown */
+/*-------------- dropdown------------ */
+
+
+.selection-form {
+  display: flex;
+  /* justify-content: space-around;
+  flex-wrap: wrap; */
+}
+
 .group-select {
 
 
@@ -142,13 +205,15 @@ input[type="checkbox"] {
 
 .donors {
   padding: 40px 0;
-  /* background: #f1f1f1; */
+  /* background: #9f2828; */
 
   color: #040303;
   text-align: center;
   width: 80%;
 
   margin-top: 50px;
+
+
 
 
 
@@ -191,6 +256,7 @@ input[type="checkbox"] {
   border-radius: 25px;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
     0 10px 10px rgba(0, 0, 0, 0.22);
+
   /* background-color: aquamarine; */
 
 }
@@ -324,14 +390,12 @@ input[type="checkbox"] {
 }
 
 
-.myfoot {
-  height: 100vh;
-}
+
 
 
 /* ------------------------footer------------------ */
 .footers {
-  background-color: #0d0606;
+  background-color: #fd8c8c;
   color: #f2f2f2;
   height: 50vh;
 }
