--- a/requestpool.css
+++ b/requestpool.css
@@ -240,6 +240,19 @@ input[type="checkbox"] {
 
   /* background-color: aquamarine; */
 }
+.donor-card button{
+    
+        padding: 10px 20px;
+        background-color: #ff4b2b;
+        border: 1px solid #ddd;
+        color: rgb(255, 255, 255);
+        width: 100%;
+        border-radius: 15px;
+        /* height: 48px; */
+        align-self: center;
+        font-size: medium;
+      
+  }
 
 .donor-card img {
   width: 100px;
@@ -307,6 +320,8 @@ input[type="checkbox"] {
     margin-left: -40px;
     width: 80%;
   }
+
+  
 
   /* ---------------------------filters-------------------- */
 
