--- a/styles/qrmessage.css
+++ b/styles/qrmessage.css
@@ -12,7 +12,7 @@
 
 body {
 	/* background-color: chartreuse; */
-	background-image: url(./assets/backgroundwave1.png);
+	background-image: url(../assets/backgroundwave1.png);
 
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -189,13 +189,7 @@ a {
 	margin: 15px 0;
 }
 
-input[type=file]::file-selector-button {
 
-	border-radius: 10px;
-	border: none;
-	display: none;
-
-}
 
 .profile-picture-selection {
 
